footer css corrected, map extra space removed, sponsor bgcolor changed, and some css work

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 70vh;
+  background-color:aliceblue;
 }
 
 #location{
@@ -11,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 70vh;
 }
 
 #footer{
@@ -19,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  /* height: 70vh; */
 }
 
 .App {
